@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: gnubg.c,v 1.51 2000/07/31 20:29:29 gtw Exp $
+ * $Id: gnubg.c,v 1.52 2000/08/01 16:35:31 gtw Exp $
  */
 
 #include "config.h"
@@ -1253,6 +1253,9 @@ static void LoadCommands( FILE *pf, char *szFile ) {
 	
 	if( feof( pf ) || fInterrupt )
 	    return;
+
+	if( *sz == '#' ) /* Comment */
+	    continue;
 	
 	HandleCommand( sz, acTop );
 
@@ -1367,8 +1370,20 @@ extern void CommandSaveSettings( char *szParam ) {
     }
 
     errno = 0;
-    
-    fprintf( pf, "set automatic bearoff %s\n"
+
+    fprintf( pf, "#\n"
+	     "# GNU Backgammon command file\n"
+	     "#   generated by GNU Backgammon " VERSION "\n"
+	     "#\n"
+	     "# WARNING: The file `.gnubgautorc' is automatically generated "
+	     "by the\n"
+	     "# `save settings' command, and will be overwritten the next "
+	     "time settings\n"
+	     "# are saved.  If you want to add startup commands manually, "
+	     "you should\n"
+	     "# use `.gnubgrc' instead.\n"
+	     "\n"
+	     "set automatic bearoff %s\n"
 	     "set automatic crawford %s\n"
 	     "set automatic game %s\n"
 	     "set automatic move %s\n"
@@ -1380,10 +1395,14 @@ extern void CommandSaveSettings( char *szParam ) {
 	     fAutoRoll ? "on" : "off" );
     /* FIXME save cache settings */
     fprintf( pf, "set confirm %s\n"
+#if USE_GUI
 	     "set delay %d\n"
+#endif
 	     "set display %s\n",
 	     fConfirm ? "on" : "off",
+#if USE_GUI
 	     nDelay,
+#endif
 	     fDisplay ? "on" : "off" );
     /* FIXME save eval settings */
     fprintf( pf, "set jacoby %s\n"
